# eegle-model

./: .gitignore  README.md  environment.yml  pyproject.toml  quick.txt  requirements-lock.txt
configs/: bendr_p300_bnci2014_008.yml  bendr_p300_random_init_smoke.yml  eegnet_bnci2014_001.yml  eegnet_p300_bnci2014_008.yml  eegnet_p300_epfl.yml  foundation_external_template.yml  riemann_bnci2014_001.yml  riemann_p300_bnci2014_008.yml  shallow_bnci2014_001.yml
configs/suites/: p300_bendr_compare_windows.yml  p300_eegnet_windows.yml
scripts/: diagnose_bendr.py  export_attention8.py  inspect_model.py  run_suite.py  train.py
scripts/windows/: run_bendr_compare.ps1  run_p300_eegnet.ps1
src/eegworkbench/: __init__.py  attention8.py  closedloop_specs.py  config.py  suites.py
src/eegworkbench/adapters/: __init__.py  bendr.py
src/eegworkbench/data/: __init__.py  loaders.py  transforms.py
src/eegworkbench/evaluation/: __init__.py  metrics.py
src/eegworkbench/models/: __init__.py  external.py  registry.py  sklearn_models.py
src/eegworkbench/training/: __init__.py  experiment.py  torch_loop.py
tests/: test_attention8_bridge.py  test_config.py  test_external_env.py  test_external_repo_path.py  test_metrics.py  test_suite_paths.py  test_synthetic_p300.py
